Added ref to computational services model to final paragraph

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -381,9 +381,7 @@ The strong support for material and social benefits associated with leadership (
 
 These exploratory results provide an empirical foundation for future research on leadership across or within diverse cultural settings and across all levels of social organization. Political leadership is common across a broad range of populations, including among relatively small-scale and egalitarian hunter-gatherers. Among hunter-gatherers, however, leaders more frequently emerge within residential subgroups and kin groups. Given the vast majority of human evolutionary history involved subsistence economies characterized by hunting and gathering and greater residential mobility [@lee_cambridge_1999; @marlowe_hunter-gatherers_2005], these results suggest leadership within kin groups and local subgroups likely has a long evolutionary history. Despite a universal male-bias in political leadership at the community level, women are expected to have greater decision-making responsibilities and adopt leadership roles within families and local groups [@brown_her_1985; @garfield_evolutionary_2019; @hagen_leadership_2019; @smith_obstacles_2018; @von_rueden_sex_2018]. 
 
-Contemporary theoretical models of the evolution of leadership often emphasize leaders roles in organizing collective action and in managing between group conflicts [@hooper_theory_2010; @pietraszewski_evolution_2019; @price_evolution_2014]. Results here do support the important functions of leaders in organizing cooperation and facilitating social functions -- services which provide direct benefits to the group. However, the ubiquity of conflict resolution by leaders across social contexts and cultures calls for greater attention to the roles of leaders of all types in managing intra-group conflict between group members -- services tailored to provide direct benefits to a few individuals and more indirect group benefits [@glowacki_leadership_2015; @wiessner_collective_2019; @pupu_challenges_2018]. 
-
-decision-making, providing counsel. Dominance. Benefits/costs.
+Contemporary theoretical models of the evolution of leadership often emphasize leaders roles in organizing collective action and in managing between group conflicts [@hooper_theory_2010; @pietraszewski_evolution_2019; @price_evolution_2014]. Results here do support the important functions of leaders in organizing cooperation and facilitating social functions -- services which provide direct benefits to the group. However, the ubiquity of conflict resolution by leaders across social contexts and cultures calls for greater attention to the roles of leaders of all types in managing intra-group conflict between group members -- services tailored to provide direct benefits to a few individuals and more indirect group benefits [@glowacki_leadership_2015; @wiessner_collective_2019; @pupu_challenges_2018; @hagen_leadership_2019].
 
 # References
 
