--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -127,7 +127,6 @@ We evaluate the cross-cultural frequency in the functions and qualities of leade
 
 Here we draw on the same database of 1212 ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the electronic Human Relations Area Files (eHRAF) database [@naroll_proposed_1967]. The *leadershipdata* database was designed to capture a wide sample of the ethnographic record of leadership. For the current study, two authors coded each text record for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. 
 
-
 The operationalized qualities and functions (See Table \@ref(tab:qualfuncvars)) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, while also creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Table \@ref(tab:qualfuncvars). ZG then followed the same process of coding the entire sample of 1212 text records for the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` operationalized variables. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository (a data frame named *leader_text2*).
 
 <!-- DISCUSS IRR. -->
@@ -148,7 +147,11 @@ library(knitr)
 kable(cost_benefit_vars_tab, caption = "Operational definitions for coded benefits and costs for leaders and followers.")
 ```
 
-For additional details on ethnographic sampling and creation of the *leadershipdata* package see @garfield_evolutionary_2019. 
+We illustrate our coding with an example from Andamanese hunter-gatherers [@az02-001, p. 45]:
+
+>Their domestic policy may be described as a communism modified by the authority, more or less nominal, of the chief. The head chief of a tribe is called maia igla and the elders, or sub-chiefs, i.e. those in authority over each community, consisting of from 20 to 50 individuals, maicla. The head chief, who usually resides at a permanent encampment, has authority over all the sub-chiefs, but his power, like theirs, is very limited. It is exercised mainly in organising meetings between the various communities belonging to his tribe, and in exerting influence in all questions affecting the welfare of his followers. It is the chief alone, as may be supposed, who directs the movements of a party while on hunting and fishing expeditions, or when migrating. It is usually through his intervention that disputes are settled, but he possesses no power to punish or enforce obedience to his wishes, it being left to all alike to take the law into their own hands when aggrieved. The aryoto and eremtaga in each tribe have their own head chief, who are independent the one of the other.
+
+This text record was coded has having evidence for the functions *Resolve conflict*, *Organize cooperation*, *Movement/migration*, *Provide subsistence*, and *Misc. social functions*. For qualities, there was evidence for *High status*. Although authority is mentioned, we did not code evidence for this variable because the chief "possesses no power to punish or enforce obedience to his wishes," contrary to our operationalization. For additional details on ethnographic sampling and creation of the *leadershipdata* package see @garfield_evolutionary_2019. 
 
 ## Statistical analysis
 
@@ -301,9 +304,7 @@ In groups of all subsistence types (e.g., hunter-gatherers, pastoralists) leader
 
 ### Variable dimensions
 
-Leadership in residential subgroups (e.g., hunting party, work group) was relatively common among hunter-gatherers but relatively rare among agriculturists. Leadership at the surpacommunity level, in contrast, was relatively rare among hunter-gatherers but quite common among agriculturists. The only example of supracommunity leadership among hunter-gatherers was from the Andamanese, a group of populations of Negrito hunter-gatherers of the Andaman Islands  by @az02-001: p. 45, who discussed the roles of a "head chief" from a permanent residential location and their marginal influence over other, local residential leaders:
-
->Their domestic policy may be described as a communism modified by the authority, more or less nominal, of the chief. The head chief of a tribe is called maia igla and the elders, or sub-chiefs, i.e. those in authority over each community, consisting of from 20 to 50 individuals, maicla . The head chief, who usually resides at a permanent encampment, has authority over all the sub-chiefs, but his power, like theirs, is very limited. It is exercised mainly in organising meetings between the various communities belonging to his tribe, and in exerting influence in all questions affecting the welfare of his followers. It is the chief alone, as may be supposed, who directs the movements of a party while on hunting and fishing expeditions, or when migrating. It is usually through his intervention that disputes are settled, but he possesses no power to punish or enforce obedience to his wishes, it being left to all alike to take the law into their own hands when aggrieved. The aryoto and eremtaga in each tribe have their own head chief, who are independent the one of the other.
+Leadership in residential subgroups (e.g., hunting party, work group) was relatively common among hunter-gatherers but relatively rare among agriculturists. Leadership at the surpacommunity level, in contrast, was relatively rare among hunter-gatherers but quite common among agriculturists. The only example of supracommunity leadership among hunter-gatherers was from the Andamanese, a group of populations of Negrito hunter-gatherers of the Andaman Islands by [@az02-001, p. 45], who discussed the roles of a "head chief" from a permanent residential location and their marginal influence over other, local residential leaders (see quote in Methods section).
 
 Hunter-gatherers and pastoralists, populations more likely to experience high residential mobility [@wild_making_2019; @rigby_persistent_1985; @kelly_foraging_2013], exhibited greater relative frequencies of leadership within residential groups and kin groups. Pastoralists, however, rely in part on a highly defensible resource base (i.e., livestock) and exhibit leadership beyond the community more so than hunter-gatherers and on par with horticulturalists. Pastoral and horticultural populations often experience elevated rates of inter-group conflict relative to mobile hunter-gatherers and these results are consistent with a relationship between increased inter-group conflict and more elaborated political leadership systems [@ember_warfare_1992]. For example, among the Somali, a politically complex and socially stratified agro-pastoralists group distributed across the Horn of Africa, @mo04-021 [p. 58] notes that, "the Sultan does not lead the army of the tribe in war. He names a chief of the armed forces."
 
