Adding bib entry.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -598,6 +598,24 @@ Cooperation is potentially risky in a population where non-producing cheats can 
 }
 
 
+@incollection{fo07-056,
+	address = {London},
+	title = {Azande, and related peoples of the anglo-egyptian sudan and belgian congo},
+	url = {https://ehrafworldcultures.yale.edu/document?id=fo07-056},
+	abstract = {This document, written by two professional anthropologists from secondary materials, gives a succinct account of several aspects of Azande ethnography, with special emphasis on culture history, relations with neighboring tribes, and subject peoples, political structure of Zande society, social and kinship organizations (including marriage), witchcraft, oracles and magic, and Zande religion. Some very brief information is also presented on location of the Zande, population size, language, dress, physical characteristics and ornamentation. Material culture is covered very little, if at all, and only the briefest mention is given to Zande religious ceremonials.},
+	language = {English},
+	booktitle = {Ethnographic survey of africa, east central africa},
+	publisher = {International African Institute},
+	author = {Baxter, P. T. W. and Butt, Audrey},
+	year = {1953},
+	keywords = {Status, History, External trade, Revelation and divination, Sorcery, Community heads, and prestige, role, Azande, Localized kin groups, Magic, Military organization, Tribe and nation, Zande (African people)},
+	pages = {x, 152},
+	annote = {Accessed on: 2019-12-03},
+	annote = {Includes bibliographical references and index},
+	annote = {Only pages i-x, 11-96, 137-152 and end map facing p. 152 are included},
+	annote = {P. T. W. Baxter and Audrey Butt}
+}
+
 @article{mukhopadhyay_anthropological_1988,
 	title = {Anthropological studies of women's status revisited: 1977-1987.},
 	volume = {17},
