Final changes before submission.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -597,6 +597,12 @@ Cooperation is potentially risky in a population where non-producing cheats can 
 	file = {Aktipis et al. - 2018 - Understanding cooperation through fitness interdep.pdf:/Users/hagen/Zotero/storage/XKCR54WG/Aktipis et al. - 2018 - Understanding cooperation through fitness interdep.pdf:application/pdf;Snapshot:/Users/hagen/Zotero/storage/VVRK8F2D/s41562-018-0378-4.html:text/html}
 }
 
+@book{house2013strategic,
+  title={Strategic leadership across cultures: GLOBE study of CEO leadership behavior and effectiveness in 24 countries},
+  author={House, Robert J and Dorfman, Peter W and Javidan, Mansour and Hanges, Paul J and de Luque, Mary F Sully},
+  year={2013},
+  publisher={Sage Publications}
+}
 
 @incollection{fo07-056,
 	address = {London},
