--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -3,7 +3,7 @@ title: "Leadership across 59 traditional cultures: an exploratory analysis"
 author: "Zachary H. Garfield, Kristen L. Syme, and Edward H. Hagen"
 date: "4/25/2019"
 output: 
-  bookdown::html_document2
+  bookdown::word_document2
 bibliography: Leader2.bib
 csl: evolution-and-human-behavior.csl
 ---
@@ -22,9 +22,9 @@ library(pander)
 
 Leader-follower dynamics are central to much of social life. Processes of leadership and followership observed in traditional societies, especially among small-scale societies, are often quite distinct from those observed among WEIRD societies and their complex organizations. Many researchers have turned to evolutionary theory to integrate diverse perspectives on human leadership and to better understand the diversity of leadership and followership observed across human cultures and across social contexts. Evolutionary theories of leadership, in turn, draw on ethnographic case studies from traditional societies that are thought to more closely resemble the small, face-to-face societies in which humans evolved. Currently, though, there is limited systematic data on the nature of leadership in such societies.
 
-We build on our previous cross-cultural findings to systematically review the nature of leadership across the full range of human cultural diversity. Over 1200 ethnographic texts from the Human Relations Area Files (HRAF) were coded on leader qualities, their functions, and the costs and benefits for both leaders and followers across diverse social contexts. We discovered evidence for both cultural universals in leadership, as well as important variation, especially when compared to leadership in WEIRD societies. Across all contexts, leaders in the ethnographic record are most commonly described as intelligent and knowledgeable, of high social status, accomplished, wealthy, and prosocial. The primary benefits leaders offer to followers are resolving conflicts, organizing cooperation, providing social functions, leading in inter-group conflicts, providing ritual services, and distributing resources. The primary benefits leaders receive from followers include non-food resources, increased social status, and social services from followers. The most frequent costs of leadership for leaders include loss of social status and resources, and increased risk of harm or conflict. For followers, the most frequent costs include loss of resources, costs in providing social services, and increased risk of harm or conflict.
+We build on our previous cross-cultural findings to systematically review the nature of leadership across the full range of human cultural diversity. Over 1200 ethnographic texts from the Human Relations Area Files (HRAF) were coded on leader qualities, their functions, and the costs and benefits for both leaders and followers across diverse social contexts. We discovered evidence for both cultural universals in leadership, as well as important variation, especially when compared to leadership in WEIRD societies. Across all contexts, leaders in the ethnographic record are most commonly described as intelligent and knowledgeable, of high social status, accomplished, wealthy, and prosocial. The primary benefits leaders offer to followers are resolving conflicts, organizing cooperation, providing social functions, leading in inter-group conflicts, providing ritual services, and distributing resources. The primary benefits leaders receive from followers include material resources, increased social status, and social services from followers. The most frequent costs of leadership for leaders include loss of social status, resources or social services and increased risk of harm or conflict. For followers, the most frequent costs include loss of resources, costs in providing social services, and increased risk of harm or conflict.
 
-Leadership in WEIRD settings often differs substantially from non-WEIRD settings. In WEIRD settings influence often extends into multiple domains, organizations are more hierarchical, and interactions between leaders and followers are less frequently face-to-face. A detailed view of leaders, their roles, and the costs and benefits of leadership across traditional societies and across contexts stands to make a significant empirical contribution for the development of more integrative evolutionary theories of leadership and social hierarchy.
+Leadership in WEIRD settings often differs substantially from non-WEIRD settings and dominant theories in managerial studies have not previously had broad empirical data on leadership, management, and social organization across diverse populations. In WEIRD settings influence often extends into multiple domains, organizations are more hierarchical, and interactions between leaders and followers are less frequently face-to-face. A detailed view of leaders, their roles, and the costs and benefits of leadership across traditional societies and across contexts stands to make a significant empirical contribution for the development of more integrative evolutionary theories of leadership and social hierarchy.
 
 # Introduction
 
@@ -55,7 +55,7 @@ Scholars in managerial studies have long discussed the behaviors of leaders and 
 
 @wofford_factor_1970 provides an early empirical view of managerial functions. A factor analysis of managerial behaviors from over 130 US employees' survey responses identified five interpretable, orthogonal factors: (1) an *order and group achievement* factor, identifying participative, democratic, and organizational planning function; (2) a *personal enhancement oriented* factor, associated with authority and control, (3) a *personal interaction* factor, associated with interpersonal relationships and employee support, (4) a *security and maintenance* factor, associated with self-preservation, and (5) a *dynamic and achievement oriented* factor, associated with aggressive, self-assured actions. Wofford's analysis provided a foundation for future empirical studies of leadership and management functions. He contrasted factor one type management, described as the "professional administrator" who effectively collaborates and integrates team members, from factors two and five, described as "autocratic leaders" strongly motivated by personal power and a willingness to rely on aggressive tactics [@wofford_factor_1970]. 
 
-More recently, many managerial scholars have adopted a comparative approach to better understand cultural diversity in leadership systems, drawing on Culturally Endorsed Implicit Leadership Theory (CLT), which suggests cultural variation in social norms has the potential to impact follower preferences for leadership styles [@moore_literature_2018]. The Global Leadership and Organizational Behavior Effectiveness (GLOBE) project is a large-scale international research program aimed at understanding leader effectiveness and cultural variation across large organizations. The GLOBE project has produced multiple cross-national data sets on leadership and hundreds of publications. For example, *The GLOBE Study of CEO Leadership Behavior and Effectiveness in 24 Countries* draws on data from over 1,000 CEOs and over 5,000 senior executives from corporations in varied of industries across 24 countries. The goals of the GLOBE CEO Study were to address (1) how national culture influences expectations for the behaviors of leaders, (2) which behaviors of CEOs are typically associated with organizational success, (3) differences between high-functioning and low-functioning CEOs, and (4) the importance of CEO behaviors aligning with societal expectations. Through path analysis the study concluded that cultural values indirectly predict CEO leadership behavior through culturally endorsed leadership expectations. That is, leaders moderate their behavior through culturally learned values and leadership-specific values.  
+More recently, many managerial scholars have adopted a comparative approach to better understand cultural diversity in leadership systems, drawing on Culturally Endorsed Implicit Leadership Theory (CLT), which suggests cultural variation in social norms has the potential to impact follower preferences for leadership styles [@moore_literature_2018]. The Global Leadership and Organizational Behavior Effectiveness (GLOBE) project is a large-scale international research program aimed at understanding leader effectiveness and cultural variation across large organizations. The GLOBE project has produced multiple cross-national data sets on leadership and hundreds of publications. For example, *The GLOBE Study of CEO Leadership Behavior and Effectiveness in 24 Countries* draws on data from over 1,000 CEOs and over 5,000 senior executives from corporations in varied of industries across 24 countries [@house2013strategic]. The goals of the GLOBE CEO Study were to address (1) how national culture influences expectations for the behaviors of leaders, (2) which behaviors of CEOs are typically associated with organizational success, (3) differences between high-functioning and low-functioning CEOs, and (4) the importance of CEO behaviors aligning with societal expectations. Through path analysis the study concluded that cultural values indirectly predict CEO leadership behavior through culturally endorsed leadership expectations. That is, leaders moderate their behavior through culturally learned values and leadership-specific values.  
 
 The GLOBE CEO Study defines six "global leadership behaviors" developed from 21 "primary leadership behaviors." Among the global leadership behaviors, the GLOBE CEO Study found that charismatic leadership behavior is consistently the most important behavioral trait regarding firm performance and dedication of top management team (TMT) members, followed by team-oriented behavior and human-oriented behavior. Participative leadership was moderately related to TMT dedication, however was not related to firm performance. The most successful CEOs are those who are rated as more visionary, performance oriented, and decisive. Furthermore, results strongly suggest the fit between a CEOs behavioral profile and the expectations of leadership within a society strongly predict TMT dedication and firm performance.
 
@@ -70,13 +70,9 @@ Across culturally and economically diverse populations there are some broad comm
 
 Among small-scale societies with relative egalitarianism and local political autonomy community leaders, in addition to being older, respected males, tend to be individuals with large social networks and strong social support [@von_rueden_leadership_2014; @von_rueden_roots_2014; @walker_living_2012]. Physically, leaders across multiple contexts tend to be taller and more physically formidable. Such embodied capital might equip individuals for more effective leadership in the context of inter-group conflicts as well as in the context of intra-group dispute settlement and in management of collective actions [@lukaszewski_role_2016; @von_rueden_leadership_2014; @von_rueden_roots_2014]. Charisma and oratory skills are common properties of leaders, but are especially important in the context of egalitarianism where individual leaders must rely on persuasion and more subtle forms of influence to convince community members to come to agreement [@grabo_charismatic_2016].
 
-In the context of institutionalized social stratification, such as chiefdoms and many agricultural populations, community leadership is often highly influenced by heredity and formal class structures [@earle_how_1997; @stanish_evolution_2004; @redmond_introduction_1998]. Managerial elites, who maintain influence over community decisions are endowed with a high degree of social status rooted in ideologies and associated with their roles or kin group [@stanish_evolution_2010]. In such contexts community leaders often lack strong coercive authority, but maintain substantial influence through ideological systems and ritual or religious prowess inaccessible to non-elites [@stanish_evolution_2010]. The association of formal community leadership and supernatural abilities is likely an important precursor of institutionalized and coercive authority. 
+In the context of institutionalized social stratification, such as chiefdoms and many agricultural populations, community leadership is often highly influenced by heredity and formal class structures [@earle_how_1997; @stanish_evolution_2004; @redmond_introduction_1998]. Managerial elites, who maintain influence over community decisions are endowed with a high degree of social status rooted in ideologies and associated with their roles or kin group [@stanish_evolution_2010]. In such contexts community leaders often lack strong coercive authority, but maintain substantial influence through ideological systems and ritual or religious prowess inaccessible to non-elites [@stanish_evolution_2010]. The association of formal community leadership and supernatural abilities is likely an important precursor of institutionalized and coercive authority. Within state-level societies including non-industrial kingdoms leadership positions are proscribed and institutionalized. Ruling classes, parties, or political bodies monopolize social and political influence and maintain control through a variety of mechanisms including military force, ideological systems, and through the control of information and propaganda [@cohen_comparative_1967; @bodley_cultural_2011]. 
 
-Within state-level societies including non-industrial kingdoms leadership positions are proscribed and institutionalized. Ruling classes, parties, or political bodies monopolize social and political influence and maintain control through a variety of mechanisms including military force, ideological systems, and through the control of information and propaganda [@cohen_comparative_1967; @bodley_cultural_2011]. 
-
-Across disciplines many theoretical models and empirical findings have implicated high intelligence as an important quality positively associated with effective leadership [e.g., @johnson_leadership_2015; @judge_intelligence_2004; @neel_being_1980; @antonakis_does_2009]. Recent cross-cultural evidence and from a small-scale society implicates strong relationships between perceptions of intelligence and leadership among males [@garfield_evolutionary_2019; @garfield_investigating_2019]. These results suggests high intelligence and specialized knowledge are universal traits of political and community leaders. 
-
-Within managerial studies scholars often suggest the cognitive demands of leadership escalate with increasing organizational complexity [@zaccaro_organizational_2002]. More complex organizations require leaders equipped to process complex information, understand distinct departmentalized bodies, and resolve conflicting points of view, as well as be equipped to socially manage diverse individuals [@bass_handbook_1990; @schneider_organizations_2006; @antonakis_does_2009]. However, recent evidence suggests a curvilinear effect in that exceptionally intelligence individuals at the high end of the distribution may not be the most effective leaders in contemporary business settings [@antonakis_can_2017].
+Across disciplines many theoretical models and empirical findings have implicated high intelligence as an important quality positively associated with effective leadership [e.g., @johnson_leadership_2015; @judge_intelligence_2004; @neel_being_1980; @antonakis_does_2009]. Recent cross-cultural evidence and from a small-scale society implicates strong relationships between perceptions of intelligence and leadership among males [@garfield_evolutionary_2019; @garfield_investigating_2019]. These results suggests high intelligence and specialized knowledge are universal traits of political and community leaders. Within managerial studies scholars often suggest the cognitive demands of leadership escalate with increasing organizational complexity [@zaccaro_organizational_2002]. More complex organizations require leaders equipped to process complex information, understand distinct departmentalized bodies, and resolve conflicting points of view, as well as be equipped to socially manage diverse individuals [@bass_handbook_1990; @schneider_organizations_2006; @antonakis_does_2009]. However, recent evidence suggests a curvilinear effect in that exceptionally intelligence individuals at the high end of the distribution may not be the most effective leaders in contemporary business settings [@antonakis_can_2017].
 
 <!-- COULD GET INTO LEADER VS MANAGER DISTINCTION -->
 
