--- a/Leader2.bib
+++ b/Leader2.bib
@@ -4420,6 +4420,22 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	keywords = {Economics, Leadership, WEIRD}
 }
 
+
+@article{henrich_weirdest_2010,
+	title = {The weirdest people in the world?},
+	volume = {33},
+	issn = {1469-1825},
+	doi = {10.1017/S0140525X0999152X},
+	abstract = {Behavioral scientists routinely publish broad claims about human psychology and behavior in the world's top journals based on samples drawn entirely from Western, Educated, Industrialized, Rich, and Democratic (WEIRD) societies. Researchers - often implicitly - assume that either there is little variation across human populations, or that these "standard subjects" are as representative of the species as any other population. Are these assumptions justified? Here, our review of the comparative database from across the behavioral sciences suggests both that there is substantial variability in experimental results across populations and that WEIRD subjects are particularly unusual compared with the rest of the species - frequent outliers. The domains reviewed include visual perception, fairness, cooperation, spatial reasoning, categorization and inferential induction, moral reasoning, reasoning styles, self-concepts and related motivations, and the heritability of IQ. The findings suggest that members of WEIRD societies, including young children, are among the least representative populations one could find for generalizing about humans. Many of these findings involve domains that are associated with fundamental aspects of psychology, motivation, and behavior - hence, there are no obvious a priori grounds for claiming that a particular behavioral phenomenon is universal based on sampling from a single subpopulation. Overall, these empirical patterns suggests that we need to be less cavalier in addressing questions of human nature on the basis of data drawn from this particularly thin, and rather unusual, slice of humanity. We close by proposing ways to structurally re-organize the behavioral sciences to best tackle these challenges.},
+	language = {eng},
+	journal = {Behavioral and Brain Sciences},
+	author = {Henrich, Joseph and Heine, Steven J. and Norenzayan, Ara},
+	year = {2010},
+	pages = {61--135},
+	annote = {The following values have no corresponding Zotero field:auth-affiliation: Department of Psychology and Department of Economics, University of British Columbia, Vancouver V6T 1Z4, Canada. joseph.henrich@gmail.comnumber: 2-3pub-location: Englandissn: 1469-1825coden: doi: 10.1017/S0140525X0999152Xcitation-id: Henrich 2010accession-num: 20550733modified-date: 2017-08-24 09:29:45 +0700},
+	file = {The%20weirdest%20people%20in%20the%20wor:/Users/zgarf/Zotero/storage/G6FXDN47/The weirdest people in the wor.pdf:application/pdf;The%20weirdest%20people%20in%20the%20wor%20%232:/Users/zgarf/Zotero/storage/7I7KUZPZ/The weirdest people in the wor #2.pdf:application/pdf;The%20weirdest%20people%20in%20the%20wor%20%233:/Users/zgarf/Zotero/storage/3UYVHTJI/The weirdest people in the wor #3.pdf:application/pdf}
+}
+
 @article{escasa_male_2010,
 	title = {Male traits associated with attractiveness in {Conambo}, {Ecuador}},
 	volume = {31},
