--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Leadership across 59 traditional cultures: an exploratory analysis"
+title: "Leadership across cultures and contexts: an exploratory analysis"
 author: "Zachary H. Garfield, Kristen L. Syme, and Edward H. Hagen"
 date: "4/25/2019"
 output: 
-  bookdown::word_document2
+  bookdown::html_document2
 bibliography: Leader2.bib
 csl: evolution-and-human-behavior.csl
 ---
@@ -36,7 +36,7 @@ Leadership and followership are critical in understanding group structure and ha
 
 Evolutionary scholars typically define leaders as individuals who maintain disproportionate influence over decision-making within groups [@von_rueden_leadership_2015], whatever the group may be. Leadership roles are also often associated with specific rights and responsibilities. Not surprisingly, the functions leaders serve then are often closely linked to group contexts and the salient challenges groups face. Certain types of groups, such as kin groups, economic groups, or political groups, may tend to favor leaders with specific qualities, however there can be substantial variation in the traits of leaders within these groups as well as between them.
 
-We first briefly review theoretical, ethnographic, and empirical perspectives on the qualities of leaders, the functions they serve, and the costs and benefits of leadership across human societies, including WEIRD and non-WEIRD populations. We then outline the aims and methods of the current cross-cultural study, before presenting results and interpretations. Through novel exploratory analyses encompassing the full range of cultural diversity and social contexts, we aim to advance leadership studies across disciplines and provide researchers with a foundation for more detailed approaches to human leadership across cultures and contexts.   
+We first briefly review theoretical, ethnographic, and empirical perspectives on the qualities of leaders, the functions they serve, and the costs and benefits of leadership across human societies, including WEIRD and non-WEIRD populations [i.e., @henrich_weirdest_2010]. We then outline the aims and methods of the current cross-cultural study, before presenting results and interpretations. Through novel exploratory analyses encompassing the full range of cultural diversity and social contexts, we aim to advance leadership studies across disciplines and provide researchers with a foundation for more detailed approaches to human leadership across cultures and contexts.   
 
 
 <!-- Reference a historical example of a short term leader implementing change with lasting effects, good and/or bad. -->
@@ -59,12 +59,14 @@ More recently, many managerial scholars have adopted a comparative approach to b
 
 The GLOBE CEO Study defines six "global leadership behaviors" developed from 21 "primary leadership behaviors." Among the global leadership behaviors, the GLOBE CEO Study found that charismatic leadership behavior is consistently the most important behavioral trait regarding firm performance and dedication of top management team (TMT) members, followed by team-oriented behavior and human-oriented behavior. Participative leadership was moderately related to TMT dedication, however was not related to firm performance. The most successful CEOs are those who are rated as more visionary, performance oriented, and decisive. Furthermore, results strongly suggest the fit between a CEOs behavioral profile and the expectations of leadership within a society strongly predict TMT dedication and firm performance.
 
-<!-- NEED CONCLUSION PARAGRAPH/STATEMENT.  -->
+<!-- ADDED CONCLUSION PARAGRAPH/STATEMENT.  -->
+In contrasting the functions leaders serve in smaller-scale, non-industrial, and more traditional societies (i.e., non-WEIRD), from larger-scale, (post)industrial contexts (i.e., WEIRD), community leaders in non-WEIRD settings are more likely to have domain-specific functions based on role-specialization [see @smith_leadership_2016]. The hunt leader does not necessarily have authority over military raids and the lineage head does not necessarily have authority over ritual ceremonies. In WEIRD settings however, community, organizational, and political leaders often have decision-making authority across multiple domains. In the United States, despite a designed seperation of power across branches of government, presidents, governors, and mayors oversee governmental bodies and have substantial influence in economics, social and legal policies, and international and inter-regional relations. Community leadership functions in increasingly WEIRD contexts will likely be increasingly focused on economics and inter-group relations, whereas in less WEIRD contexts community leaders will primarily function to resolve interpersonal conflicts and manage inter-group social dynamics. 
+<!-- Could add ethnographic examples for SSS and LSS  -->
 
 
 ## The qualities of leaders across cultures and contexts
 
-Across culturally and economically diverse populations there are some broad commonalities in the qualities of community leaders. When strong community leaders emerge, they are most typically high status males who embody the ideal qualities most respected by the group and necessary for successful leadership in the domains in which they have influence [@henrich_evolution_2001; @van_vugt_evolutionary_2006; @collier_politics_1981; @low_men_1992; @roscoe_social_2019]. Elders, respected individuals, and highly intelligent or knowledgeable individuals tend to have greater influence over community decisions across cultures, including among the most egalitarian hunter-gatherers, stratified chiefdoms, and contemporary state-level organizations [@silverman_how_1978; @van_vugt_cognitive_2007; @tooby_cognitive_2006; @garfield_review_2019; @bass_handbook_1990]. Drawing on cross-national data through the GLOBE project from over 15,000 middle managers across 60 countries, @den_hartog_culture_1999 conclude that elements of charismatic and transformational leadership -- leadership styles when leaders express an inclusive vision of future progress, lead through inspiration, and develop initiatives in collaboration -- are universally endorsed across nations and are perceived to be associated with effective leadership. In particular, inducing motivation, having foresight, being encouraging and communicative, trustworthiness, and building self-confidence among followers are suggested to be universal attributes of outstanding leadership in managerial contexts. 
+Across culturally and economically diverse populations there are some broad commonalities in the qualities of community leaders. When strong community leaders emerge, they are most typically high status males who embody the ideal qualities most respected by the group and necessary for successful leadership in the domains in which they have influence [@henrich_evolution_2001; @van_vugt_evolutionary_2006; @collier_politics_1981; @low_men_1992; @roscoe_social_2019]. Elders, respected individuals, and highly intelligent or knowledgeable individuals tend to have greater influence over community decisions across cultures, including among the most egalitarian hunter-gatherers, stratified chiefdoms, and contemporary state-level organizations [@silverman_how_1978; @van_vugt_cognitive_2007; @tooby_cognitive_2006; @garfield_review_2019; @bass_handbook_1990]. Drawing on cross-national data through the GLOBE project from over 15,000 middle managers across 60 countries, @den_hartog_culture_1999 conclude that elements of charismatic and transformational leadership -- leadership styles when leaders express an inclusive vision of future progress, lead through inspiration, and develop initiatives in collaboration -- are universally endorsed across nations and are qualities perceived to be associated with effective leadership. In particular, inducing motivation, having foresight, being encouraging and communicative, trustworthiness, and building self-confidence among followers are suggested to be universal attributes of outstanding leadership in managerial contexts.
 
 <!-- Other attributes of charismatic leadership found to be culturally contingent included ambitiousness, self-effacing, enthusiasm, and risk-taking [@den_hartog_culture_1999].  -->
 
@@ -77,6 +79,7 @@ Across disciplines many theoretical models and empirical findings have implicate
 <!-- COULD GET INTO LEADER VS MANAGER DISTINCTION -->
 
 <!-- NEED CONCLUSION PARAGRAPH/STATEMENT. -->
+Much of the theoretical leadership literature across disciplines suggests relative uniformity in many qualities of community leaders. Intelligence, charisma, effective decision-making capabilities, high social status and strong social networks are likely to be universal qualities of political and community leaders. In more socially stratified, politically complex, and in increasingly WEIRD contexts, heredity, ascribed social statuses, and affiliations are more likely to be critical qualities in achieving and/or maintaining leadership positions. We also envision a curvilinear relationship between leadership status and supernatural abilities and qualities. Community leaders among small-scale hunter-gatherers may be seen as experts in the use of ritual and supernatural "tools" though they typically do not have a monopoly in their use. In chiefdoms and and in early prehistoric state societies political leaders are often seen as divine and have special supernatural qualities commoners do not. In contemporary WEIRD societies there is a trend of secularization among political leaders, generally, although religious and spiritual leaders do have substantial influence over social and moral norms.   
 
 
 
@@ -119,11 +122,11 @@ In sum, we seek to empirically and systematically accomplish the following four 
 
 ## Ethnographic sample and coding
 
-We evaluate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. Whereas @garfield_evolutionary_2019, documented supporting evidence for measures of leadership in reference to influential theoretical models, our goals here are to let the ethnographic record speak for itself in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not strictly theoretically driven.
+We estimate the cross-cultural frequency in the functions and qualities of leaders and the costs and benefits of leadership for both leaders and followers using an ethnographic database previously built and published (doi.org/10.5281/zenodo.2541999), from which @garfield_evolutionary_2019 "tested" three theoretical models against the ethnographic record. The electronic Human Relations Area Files (eHRAF) is a digital collection of ethnographies, subject-coded at teh paragraph level following a the Outline of Cultural Materials (OCM) coding scheme. The eHRAF is a subset of the larger HRAF and is continually growing in scope. 
 
-Here we draw on the same database of 1212 ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the electronic Human Relations Area Files (eHRAF) database [@naroll_proposed_1967]. The *leadershipdata* database was designed to capture a wide sample of the ethnographic record of leadership. For the current study, two authors coded each text record for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. 
+Whereas @garfield_evolutionary_2019, documented supporting evidence for measures of leadership in reference to influential theoretical models, our goals here are to let the ethnographic record "speak for itself" in understanding variation in the dimensions of leadership we are interested in, i.e., our methods and analyses are exploratory and not strictly theoretically driven. We draw on the same database of 1212 ethnographic paragraphs (termed text records) extracted from the 60-culture Probability Sample Files (PSF) of the eHRAF database [@naroll_proposed_1967]. The *leadershipdata* database was designed to capture a wide sample of the ethnographic record of leadership across social contexts and was built using an advanced search including 16 OCM codes related to leadership seven key words describing leaders or followers. For the current study, two authors coded each text record for presence of `r length(quality_vars)` distinct qualities of leaders, `r length(function_vars)` distinct functions leaders serve, and `r length(leader_benefit_vars)` benefits and `r length(leader_cost_vars)` costs that leaders or followers may receive. See @garfield_evolutionary_2019 for additional details on the ethnographic sample and methodology.
 
-The operationalized qualities and functions (See Table \@ref(tab:qualfuncvars)) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, while also creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Table \@ref(tab:qualfuncvars). ZG then followed the same process of coding the entire sample of 1212 text records for the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` operationalized variables. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository (a data frame named *leader_text2*).
+The operationalized qualities and functions (See Table \@ref(tab:qualfuncvars)) were developed from the ethnographic text records in the database. First ZG read a subset of text records and developed initial variable lists and operationalizations of the qualities and functions in those text records. Then, KS coded all 1212 text records (in a random order) for the operationalized qualities, functions, cost, and benefits, while also creating new variables and operationalizations for additional qualities and functions encountered. After coding half of the random sample KS and ZG revised the operational definitions to produce the final list of variables in Table \@ref(tab:qualfuncvars). ZG then followed the same process of coding the entire sample of 1212 text records for the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` operationalized variables, as well as a measure of group structure coded as: *residential subgroup*, which includes informal groups of co-residents, age-based groups, performance groups; *kin group*, which includes lineages, phraties, and other kin-based organizations; *economic group*, which includes subsistence groups, market groups, and other groups with primarily economic goals; *military group*, which includes all groups related to inter-group conflcit; *religious group*, which includes groups collected for spiritual or supernatural purpose; *political group (community)*, which includes political groups at the level fo the community, i.e., the political leader can potentially directly interact with most community members such as most village headmen, or *political group (supracommunity)*, which includes political groups that encompass multiple residential communities, such as complex chiefdoms, regional political leaders, and kings or state-level leaders. ZG and KS then discussed every instance of disagreement between their respective coding to produce a consensus matrix, which is used in the analyses here and added to the published data repository (a data frame named *leader_text2*). 
 
 <!-- DISCUSS IRR. -->
 
@@ -235,7 +238,7 @@ Figure \@ref(fig:cluster)A displays a dendrogram from the cluster analysis of th
 ```{r cluster, fig.cap="Cluster analysis of leader quality variables (left) and leader function variables (right). Distances are $1 - cor$. Ward agglomeration method. AU p-values (red) computed with 10,000 bootstrap samples using the pvclust package [@pvclust2015]."}
 # plot(m_pvclust_qual)
 # pvrect(m_pvclust_qual, alpha = 0.9)
-knitr::include_graphics("Figures/m_pvclust.both.svg")
+knitr::include_graphics("Figures/m_pvclust.both.png")
 ```
 
 The leader quality cluster analysis (Figure \@ref(fig:cluster)A) identified two top-level clusters, one that comprised mostly variables related to material, social, and reproductive success, and one that comprised mostly variables indicating the relationship between leaders and their groups, which we term *social orientation*. Within the latter top-level cluster we identify two interpretable though weakly supported sub-clusters which are annotated with text. Within the first top-level cluster, we identify a subcluster mainly comprising variables related to the ability to provide social benefits, and a subcluster mainly comprising variables related to the ability to impose social costs.
